# byteforge-hmac

./: .gitignore  README.md  pyproject.toml  test_client.py  test_server.py
src/: auth_header_parser.py  dict_secret_provider.py  replay_protector.py  timestamp_validator.py
src/byteforge_hmac/: __init__.py  auth_request.py  hmac_authenticator.py  hmac_client.py  hmac_validator.py  secret_provider.py
