[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byteforge-hmac"
version = "0.1.0"
description = "HMAC-based authentication library with timestamp validation and replay protection"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["hmac", "authentication", "security", "api", "signature", "replay-protection"]
authors = [
  { name = "Jason Byteforge", email = "jmazzahacks@users.noreply.github.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/jmazzahacks/byteforge-hmac"
Repository = "https://github.com/jmazzahacks/byteforge-hmac"
Issues = "https://github.com/jmazzahacks/byteforge-hmac/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/byteforge_hmac"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
